objects/Reports_Dashboard_Permission_Conf__c.object
<CustomObject>
    <fields>
        <fullName>Dashboard_Report_Description__c</fullName>
        <description>Dashboard / Report Description</description>
        <inlineHelpText>Dashboard / Report Description</inlineHelpText>
        <label>Dashboard / Report Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dashboard_Report_Link_Label__c</fullName>
        <description>Dashboard / Report Link Label</description>
        <label>Dashboard / Report Link Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dashboard_Report_Link__c</fullName>
        <description>Dashboard / Report Link</description>
        <label>Dashboard / Report Link</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BU Admin - Asia</fullName>
                </value>
                <value>
                    <fullName>BU Admin ROA</fullName>
                </value>
                <value>
                    <fullName>BU Administrator ANZ</fullName>
                </value>
                <value>
                    <fullName>BU Administrator EMEA</fullName>
                </value>
                <value>
                    <fullName>Case Support Profile - AMR</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User - Manager</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User ANZ</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User ANZ - GM AP</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User Asia</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User Asia - Product Manager</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User EMEA</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User EMEA - NPS</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User EMEA India</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User ROA</fullName>
                </value>
                <value>
                    <fullName>Force.com Profile - AMR</fullName>
                </value>
                <value>
                    <fullName>Force.com Profile - ANZPAC</fullName>
                </value>
                <value>
                    <fullName>Force.com Profile - EMEA</fullName>
                </value>
                <value>
                    <fullName>System Administrator</fullName>
                </value>
                <value>
                    <fullName>Tech Service Support - EMEA</fullName>
                </value>
                <value>
                    <fullName>ROA Custom Partner User</fullName>
                </value>
                <value>
                    <fullName>BU Administrator USA</fullName>
                </value>
                <value>
                    <fullName>Custom Access All</fullName>
                </value>
                <value>
                    <fullName>Custom Marketing User</fullName>
                </value>
                <value>
                    <fullName>Custom Partner User - AMR</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User - Manager- SBAF Approver</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User - Manager-SD</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User - Product Manager</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User - Product Manager- PM Director</fullName>
                </value>
                <value>
                    <fullName>Custom Standard User - S &amp; S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Region__c</fullName>
        <label>User Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>ROA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>AMR</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>GLOBAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usertype__c</fullName>
        <description>Usertype</description>
        <label>User Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>ASM AND RSM</fullName>
                </value>
                <value>
                    <fullName>PRODUCT MANAGER</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                    <label>Sales Manager</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reports &amp; Dashboard Permission Conf</label>
    <listViews>
        <fullName>ANZ_Reports_Dashboards</fullName>
        <columns>NAME</columns>
        <columns>User_Region__c</columns>
        <columns>Profile__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Region__c</field>
            <operation>equals</operation>
            <value>ANZ</value>
        </filters>
        <label>ANZ Reports &amp; Dashboards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>User_Region__c</columns>
        <columns>NAME</columns>
        <columns>Dashboard_Report_Link_Label__c</columns>
        <columns>Dashboard_Report_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Usertype__c</columns>
        <columns>Profile__c</columns>
        <columns>Dashboard_Report_Link__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Dashboard_Report_Description__c</columns>
        <columns>Dashboard_Report_Link__c</columns>
        <columns>Dashboard_Report_Link_Label__c</columns>
        <columns>Profile__c</columns>
        <columns>User_Region__c</columns>
        <columns>Usertype__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NAM_LAM_Reports_Dashboards</fullName>
        <columns>NAME</columns>
        <columns>User_Region__c</columns>
        <columns>Profile__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Region__c</field>
            <operation>equals</operation>
            <value>AMR</value>
        </filters>
        <label>NAM &amp; LAM Reports &amp; Dashboards</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>Reports &amp; Dashboard Permission Conf Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reports &amp; Dashboard Permission Confs</pluralLabel>
    <recordTypes>
        <fullName>Analytics</fullName>
        <active>true</active>
        <description>Analytics</description>
        <label>Analytics</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dashboard</fullName>
        <active>true</active>
        <description>Record Type - Dashboard</description>
        <label>Dashboard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Report</fullName>
        <active>true</active>
        <description>Record Type - Report</description>
        <label>Report</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>